stylesheets/style.css
/* ... */
table, tr, td, th {
	padding: 0;
	border: 0 none;
	empty-cells: show;
}
table {
	line-height: inherit;
}
.p {
	margin-bottom: 1em;
}
.p-sqz {
	margin-bottom: 1em;
}
.p-sqz + .p-sqz {
	margin-top: -0.5em;
}
tr, select {
	vertical-align: baseline;
}
textarea {
	vertical-align: top;
}
input, textarea, .textarea, select, button, .btn {
	font-family: inherit;
	font-size: 100%;
	line-height: 1.35;
}
dl {
	margin: 0 0 1em;
}
dt {
	font-weight: bolder;
}
dd {
	margin: 0 0 0.5em;
}
dl.dd {
	margin-bottom: 0.5em;
}
a > img {
	border: none;
}
input[type=text], input[type=email], input[type=password], input[type=date],
textarea, .textarea {
	border: 1px solid silver;
	padding: 3px 5px;
}
form, fieldset {
	margin: 0;
}
fieldset {
	border: 1px solid #9999cc;
	border-radius: 4px;
}
ul.x {
	margin: 0 0 1em;
	padding-left: 0 !important;
	list-style-type: none;
}
ul.x > li {
	margin: 0 0 0.25em;
}
ul.x > li:last-child {
	margin-bottom: 0;
}
ul.inline {
	list-style-type: none;
	margin: 0;
	padding: 0;
}
ul.inline > li {
	display: inline-block;
	padding-right: 1rem;
}
address {
	font-style: inherit;
}
.fieldset-covert {
	padding: 0;
	margin: 0;
	border-width: 0;
	border-radius: 0;
}


/* page background */
html, .text-default {
	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
		"Helvetica Neue", Arial, sans-serif,
		"Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
	line-height: 1.4;
}
.text-serif {
	font-family: serif;
}
.text-sans-serif {
	font-family: sans-serif;
}
.text-truncate {
	text-overflow: ellipsis !important;
	overflow-x: hidden !important;
	white-space: pre !important;
}
code, kbd, pre, samp, .text-monospace {
	font-family: SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
	font-size: 90%;
}
.shellsession-prompt {
	font-weight: bold;
	color: #777;
	-webkit-user-select: none;
	user-select: none;
}
.shellsession-typed {
	font-weight: bold;
}
body {
	margin: 0;
	position: relative;
	min-height: 100vh;
}
body.paper {
	background: linear-gradient(to right, #e2e9ec, #e2e9ec 15.5rem, white 15.5rem, white);
}
body.body-error {
	background: #dfd0d3;
}
body.paper-error {
	background: #dce4e8;
}
body.leftmenu {
	background: linear-gradient(to right, #ecf2f4, #ecf2f4 164px, white 164px, white);
}
#t-buzzer {
	background: #ecf2f4;
}


/* header */
#p-page {
	position: relative;
	z-index: 0;
}
#p-header {
	position: relative;
	padding-bottom: 24px;
}
body.leftmenu #p-header {
	min-height: 88px;
	padding-bottom: 8px;
}
body.paper #p-header {
	background: #dce4e8;
	padding-bottom: 10px;
	border-bottom: 1px solid #f33360;
}
#h-right {
	padding: 6px 24px 0;
	font-size: smaller;
	text-align: right;
	float: right;
}
.profile-dropmenu-summary {
	margin: 0 -7px;
}
.usertime {
	padding-top: 1px;
	font-size: smaller;
}
#h-deadline {
	padding-top: 1px;
}
#h-site {
	float: left;
	padding: 3px 12px 4px 24px;
	border-bottom: 1px solid #f33360;
	border-right: 1px solid #f33360;
	border-bottom-right-radius: 4px;
	background: #ffc9d6; /* #ed6182; */
	color: #f33360;
}

h1, h2, h3, h4 {
	margin: 0;
}
h1, h2 {
	font-size: 140%;
	font-size: 1.4rem;
	line-height: 1.25;
}
h1 {
	font-weight: normal;
}
h2 {
	font-weight: bold;
	margin-bottom: 1rem;
}
h3, h4 {
	margin-bottom: 0.75em;
}
#h-site > h1 {
	display: inline;
	font-weight: bold;
}
h1.paptitle {
	padding: 6px 24px;
}
.pnum-sp {
	padding-right: 0.4em;
}
.header-site-name {
	font-weight: bold;
}
#h-page {
	clear: both;
	float: left;
	padding: 0.5em 0 0 24px;
}
#h-page.header-page-submission {
	float: none;
	padding: 0;
	position: relative;
	top: 14px;
	margin-bottom: 14px;
	z-index: 1;
	background: white;
	border-top: 1px solid #f33360; /*#b2a584;*/
	border-bottom: 1px solid #f33360; /*#b2a584;*/
}
h1.leftmenu {
	margin-bottom: 36px;
}
h2.leftmenu {
	margin-bottom: 36px;
}

/* Tab bar */
#p-quicklinks {
	clear: right;
	float: right;
	font-size: smaller;
	min-height: 0.75rem;
	margin-top: 4px;
	margin-right: 24px;
}
body.paper #p-quicklinks {
	margin-top: 12px;
}
td.vbar {
	vertical-align: middle;
	min-height: 4px;
	white-space: nowrap;
	padding-left: 1rem;
}
#n-prev {
	padding-right: 0.5em;
}
#n-next {
	padding-left: 0.5em;
}
#n-search {
	min-width: 72px;
	width: 72px;
	max-width: 600px;
}
#n-search.usersearch {
	min-width: 96px;
	width: 96px;
}


/* generic horizontal styles */
/* links
   * a.qh: color inherit/link
   * a.noq: color inherit/inherit
   * a.ulh: underline inherit/link
   * a.noul: underline inherit/inherit
   * a.q: color inherit/link + underline inherit/link (a.qh.ulh)
   * a.qo: color inherit/link + underline inherit/inherit (a.qh.noul)
   * u.x: underline when in a:hover */
a.qh, a.noq, a.noq:hover, a.q, a.qo, a.btn, a.btn:hover,
.is-error a, .is-warning a, .is-note a, .is-warning-note a, .is-urgent-note a,
.btn-qlink, .btn-qolink, .btn-ulink,
button.q, button.qo {
	color: inherit;
}
a:hover,
a.track:hover, a.ptitle:hover, a.pnum:hover,
.btn-link:hover, .btn-qlink:hover, .btn-qolink:hover,
button.link:hover, button.q:hover, button.qo:hover,
.js-click-child:hover a.hover-child,
a:hover .pavfn {
	color: #c45500;
	-webkit-text-decoration-color: #c45500;
	text-decoration-color: #c45500;
}
a:active,
a.noq:active,
a.track:active, a.ptitle:active, a.pnum:active,
.btn-link:active, .btn-qlink:active, .btn-qolink:active,
button.link:active, button.q:active, button.qo:active,
a.attention {
	color: red;
	-webkit-text-decoration-color: red;
	text-decoration-color: red;
}
a.btn {
	cursor: default;
}
.noul, .noul:hover,
a.ulh, a.q, a.qo, a.btn, a.btn:hover,
.papmode.active > a, .papmode.active:hover > a.noul, .leftmenu-item > a,
u.x {
	text-decoration: inherit;
}
.ul,
a.ulh:hover, a.q:hover, .btn-link, .btn-qlink:hover,
button.link, button.q:hover,
.papmode.active:hover > a, .leftmenu-item:hover > a,
div.js-foldup:hover a.js-foldup,
div.js-aufoldup:hover a.js-aufoldup,
div.js-assignment-fold:hover a.js-assignment-fold,
.js-click-child:hover a.hover-child,
a:hover u.x {
	text-decoration: underline;
}
/* ... */

